# spreadsheet-analyzer

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .ruff_ignore  Business Accounting_sheet2_gemini_r10_20250804_202548.ipynb  Business Accounting_sheet2_gemini_r1_20250804_204255.ipynb  Business Accounting_sheet2_gemini_r1_20250804_211738.ipynb  Business Accounting_sheet2_gemini_r1_cost_tracking_20250804_204255.json  Business Accounting_sheet2_gemini_r1_cost_tracking_20250804_211738.json  Business Accounting_sheet2_gemini_r2_20250804_204545.ipynb  Business Accounting_sheet2_gemini_r2_cost_tracking_20250804_204545.json  Business Accounting_sheet2_gemini_r3_20250804_205542.ipynb  Business Accounting_sheet2_gemini_r3_cost_tracking_20250804_205542.json  Business Accounting_sheet2_gemini_r3_cost_tracking_20250804_211514.json  Business Accounting_sheet2_gemini_r5_20250804_204645.ipynb  Business Accounting_sheet2_gemini_r5_20250804_205813.ipynb  Business Accounting_sheet2_gemini_r5_cost_tracking_20250804_204645.json  Business Accounting_sheet2_gemini_r5_cost_tracking_20250804_205813.json  Business Accounting_sheet2_gpt4_r1_20250804_213441.ipynb  Business Accounting_sheet2_gpt4_r1_cost_tracking_20250804_213441.json  Business Accounting_sheet2_gpt4_r2_20250802_234347.ipynb  Business Accounting_sheet2_gpt4_r2_20250803_154859.ipynb  Business Accounting_sheet2_gpt4_r2_20250804_160006.ipynb  Business Accounting_sheet2_gpt4_r2_cost_tracking_20250802_234347.json  Business Accounting_sheet2_gpt4_r2_cost_tracking_20250803_154859.json  Business Accounting_sheet2_gpt4_r2_cost_tracking_20250804_160006.json  Business Accounting_sheet2_gpt4_r5_20250804_161618.ipynb  Business Accounting_sheet2_gpt4_r5_cost_tracking_20250804_161618.json  Business Accounting_sheet2_gpt4_r5_cost_tracking_20250804_162525.json  Business Accounting_sheet2_gpt4_r5_cost_tracking_20250804_165520.json  Business Accounting_sheet2_gpt4_r5_cost_tracking_20250804_165916.json  CLAUDE.md  CLI_REDESIGN_PLAN.md  CONTRIBUTING.md  Dockerfile  GEMINI.md  MIGRATION_SUMMARY.md  MIGRATION_TO_PHOENIX.md  (+82 more)
.claude/: settings.local.json
.github/: .gitattributes  CODEOWNERS  LICENSE_NOTICE.md  README.md  SECURITY.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  documentation.md  feature_request.md  performance_issue.md  question.md  security_report.md
.github/workflows/: ci.yml  claude-code-review.yml  docs.yml  performance.yml
.serena/: project.yml
analysis_results/Business Accounting/: Yiriden_Transactions_2025_executed.ipynb  truck_revenue_projections.ipynb  (+1 more)
docker/: Dockerfile.loader  Dockerfile.viz
docs/: DEVELOPMENT_SETUP.md  README.md  docker-setup.md  implementation-summary.md  iterative-refinement.md  langchain-integration.md  llm-integration-summary.md  multi_table_detection.md  observability.md  ollama-models.md  quick-reference.md  single-sheet-analysis-cli.md  supported-models.md  testing-guide.md
examples/: README_notebook_tools.md  analyze_business_accounting_example.py  analyze_single_sheet_demo.py  analyze_with_refinement.py  complete_llm_analysis.py  create_sample_excel_with_issues.py  demo_iterative_refinement.py  demo_notebook_tools.py  excel_analysis_core_exec.ipynb  excel_analysis_direct.ipynb  kernel_manager_demo.py  learn_core_exec_tools.py  learn_jupyter_tools.py  llm_jupyter_demo.py  multi_table_examples.py  quick_refinement_test.py  run_experiment.py  simple_llm_demo.py  template_usage_demo.py  test_iterative_analysis.py  test_multi_table_workflow.py  test_notebook_builder.py  test_table_detector.py
experiments/: README.md  cartographer_classification_update.md  migrate_outputs.py  semantic_classification.py  semantic_classification_proposal.py  sheet_cartographer_openai.py  utils.py
outputs/: Business Accounting_sheet0_gemini_2_5_pro_r5_531bcb71_20250807_004017.ipynb  Business Accounting_sheet0_gemini_2_5_pro_r5_531bcb71_cost_tracking_20250807_004017.json  Business Accounting_sheet3_gpt_4_1_nano_r5_531bcb71_20250807_091432.ipynb  Business Accounting_sheet3_gpt_4_1_nano_r5_531bcb71_20250807_091928.ipynb  Business Accounting_sheet3_gpt_4_1_nano_r5_531bcb71_cost_tracking_20250807_091432.json  Business Accounting_sheet3_gpt_4_1_nano_r5_531bcb71_cost_tracking_20250807_091928.json  Business Accounting_sheet5_gpt_4_1_nano_r5_531bcb71_cost_tracking_20250807_091545.json
reference_notebooks/: generation_metadata.json
scripts/: README.md  analyze_excel.py  batch_analyze.py  capture_test_outputs.py  compare_notebooks.py  examine_sheet.py  explore_test_output.py  export_flows.py  generate_benchmark_report.py  run_business_accounting_analysis.py  run_deterministic_with_execution.py  run_test_suite.py  setup-docker.sh  start_phoenix.sh  test_phoenix_integration.py  visualize_fixtures.py
templates/: README.md
test-files/: COLLECTION_SUMMARY.md  download_plan.md  manifest.json  validate_files.py  validation_results.json
test_assets/: multi_table_sample.xlsx
test_data/: clean_test.xlsx  simple_test.py
tests/: __init__.py  conftest.py  test_against_captured_fixtures.py  test_base.py  test_base_stage.py  test_context_compression.py  test_enhanced_formula_analysis.py  test_formula_analysis.py  test_full_stack.py  test_graph_based_strategy.py  test_hierarchical_strategy.py  test_kernel_manager.py  test_llm_providers.py  test_notebook_llm_integration.py  test_notebook_llm_models.py  test_notebook_llm_nap.py  test_notebook_llm_orchestration.py  test_notebook_llm_providers.py  test_notebook_llm_strategies.py  test_notebook_llm_templates.py  test_notebook_llm_token_optimization.py  test_notebook_manager_comprehensive.py  test_pipeline_basic.py  test_pipeline_integration.py  test_prompt_hash_in_filenames.py  test_prompt_versioning.py  test_range_membership.py  test_result_types.py  test_stage_4_content.py  test_strict_typing.py  test_template_system.py
tools/: fix_corrupted_chars.py  fix_encoding.py  html_to_markdown_converter.py  update_prompt_hash.py
visualization/: package-lock.json  package.json  server.js
(+496 files in other folders)
